--- a/GameStore.Client/Pages/Home.razor
+++ b/GameStore.Client/Pages/Home.razor
@@ -24,6 +24,11 @@
 }
 else
 {
+    <DeleteGame 
+        Game="@currentGame" 
+        OnClose="@OnDeleteModalClose"
+    ></DeleteGame>
+ 
     <table class="table table-striped table-bordered table-hover">
         <thead class="table-dark">
         <th>Id</th>
@@ -31,6 +36,7 @@ else
         <th>Genre</th>
         <th>Price</th>
         <th>Release Date</th>
+        <th></th>
         </thead>
         <tbody>
             @foreach (var game in games)
@@ -41,7 +47,18 @@ else
                     <td>@game.Genre</td>
                     <td>@game.Price</td>
                     <td>@game.ReleaseDate</td>
-                    <td></td>
+                    <td>
+                        <button class="btn btn-primary"
+                                @onclick="(() => EditGame(game.Id))">
+                            Edit
+                        </button>
+                        <button class="btn btn-danger"
+                                data-bs-toggle="modal"
+                                data-bs-target="#deleteModal"
+                                @onclick="(() => currentGame = game)">
+                            Delete
+                        </button>
+                    </td>
                 </tr>
             }
         </tbody>
@@ -51,6 +68,7 @@ else
 @code {
 
     private Game[]? games;
+    private Game? currentGame;
 
     protected override void OnInitialized()
     {
@@ -62,4 +80,17 @@ else
         NavigationManager.NavigateTo("/game");
     }
 
+    private void EditGame(int id)
+    {
+        NavigationManager.NavigateTo($"/game/{id}");
+    }
+
+    private void OnDeleteModalClose(bool accepted)
+    {
+        if (accepted)
+        {
+            GameClient.RemoveGame(currentGame!.Id);
+            games = GameClient.GetGames();
+        }
+    }
 }
